not quite there yet, fixing css for no no smoothly scroll on firefox and checking fallback to mount unmount markdown on read page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 @-moz-document url-prefix() {
-	html {
+	html, body {
 		scroll-behavior: auto;
 	}
 }
